--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@ margin: 0; padding: 0; box-sizing: border-box; }
       max-width: 90%;
       padding: 14px 28px;
       border-radius: 18px;
-      background: rgba(0, 0, 0, 0.15);
+      background: rgba(255,255,255,0.5) !important;
       backdrop-filter: blur(25px) saturate(180%);
       -webkit-backdrop-filter: blur(25px) saturate(180%);
       box-shadow: 0 8px 32px rgba(0,0,0,0.2);
@@ -296,7 +296,7 @@ transition: 0.5s;
 
     .activePage {
         color: black;
-    background: rgba(94, 94, 94, 0.15);
+    background: rgba(255, 255, 255, 0.55);
     box-shadow: 0 6px 20px rgba(0,0,0,0.2), inset 0 0 15px rgba(255,255,255,0.4);
     transform: translateY(-2px);
     transition:0.5s    }
@@ -327,41 +327,61 @@ transition: 0.5s;
 
 <div class="slide-in" id="pageWrapper">
 
-<!-- About Section -->
-<section id="about" style="padding: 100px 40px; background-color: #f9f9f9;">
-  <h2 style="font-family:'Playfair Display',serif;font-size:52px;font-weight:700;text-align:center;letter-spacing:-0.5px;margin-bottom:50px;color:#2E7D32;">
-    About EarthMag
-  </h2>
-
-  <div style="display:flex;flex-wrap:wrap;align-items:center;justify-content:center;gap:40px;max-width:1200px;margin:0 auto;">
-    
-    <!-- Left Column: Text -->
-    <div style="flex:1;min-width:320px;max-width:600px;">
-      <p style="font-family:'Inter',sans-serif;line-height:1.8;font-size:18px;color:#444;margin-bottom:20px;">
-        <strong>EarthMag</strong> is a youth-driven platform committed to making environmental science accessible, engaging, and actionable. We believe that knowledge should not be locked in academic journals, but shared widely to inspire communities, influence policy, and empower the next generation of changemakers.
-      </p>
-      <p style="font-family:'Inter',sans-serif;line-height:1.8;font-size:18px;color:#444;margin-bottom:20px;">
-        Founded by <strong>Advay Nathany</strong>, an international student, researcher, and passionate advocate for sustainability, EarthMag was born out of a desire to bridge the gap between scientific research and public understanding. His journey began with projects in rural development and urban sustainability, and grew into a global mission: to create a platform where science meets society.
-      </p>
-      <p style="font-family:'Inter',sans-serif;line-height:1.8;font-size:18px;color:#444;margin-bottom:20px;">
-        As a leader, debater, and environmental researcher, Advay brings together experiences in academia, activism, and entrepreneurship to inspire others to think critically about the world we live in. His vision for EarthMag is to cultivate a community where students, professionals, and everyday citizens can engage with environmental issues and take part in shaping solutions.
-      </p>
-      <blockquote style="font-family:'Playfair Display',serif;font-size:22px;font-style:italic;color:#2E7D32;margin:30px 0;padding-left:20px;border-left:4px solid #2E7D32;">
-        “Change starts with awareness — and awareness starts with us.”
-      </blockquote>
-    </div>
-
-    <!-- Right Column: Images -->
-    <div style="flex:1;min-width:280px;max-width:500px;display:flex;flex-direction:column;gap:20px;align-items:center;">
-      <img src="images/earthmag-hero.jpg" alt="EarthMag mission illustration" style="width:100%;border-radius:16px;box-shadow:0 6px 20px rgba(0,0,0,0.15);object-fit:cover;">
-      <img src="images/advay-nathany.jpg" alt="Founder Advay Nathany" style="width:80%;border-radius:50%;box-shadow:0 6px 16px rgba(0,0,0,0.15);object-fit:cover;">
-    </div>
-
+<!-- About Section (Redesigned) -->
+<section id="about" style="padding: 0; background-color: #f9f9f9; text-align:center;">
+  <!-- Earth Hero Image -->
+  <div style="width:100%; overflow:hidden; height: 10%;">
+    <img src="https://www.primeit.pt/public/uploads/2023/08/a-primeira-página-na-world-wide-web-capa.jpg" alt="Earth from space" style="width:100%; max-height:400px; object-fit:cover;">
   </div>
 
-  <p style="font-family:'Inter',sans-serif;max-width:900px;margin:40px auto 0 auto;text-align:center;line-height:1.8;font-size:18px;color:#444;">
-    Whether it’s through our fact-based resources, internship opportunities, research journal, or storytelling initiatives, EarthMag stands as a reminder that change starts with awareness — and awareness starts with us. Together, we can create a more informed, resilient, and sustainable world.
-  </p>
+  <!-- Content Wrapper -->
+  <div style="padding:60px 20px; max-width:1000px; margin:0 auto; text-align:left;">
+
+    <h2 style="font-family:'Playfair Display',serif;font-size:48px;font-weight:700;color:#2E7D32;text-align:center;margin-bottom:50px;">
+      About EarthMag
+    </h2>
+
+    <!-- Mission -->
+    <div style="display:flex;align-items:flex-start;gap:20px;margin-bottom:40px;">
+      <div style="font-size:32px;color:#2E7D32;">🌍</div>
+      <div>
+        <h3 style="font-family:'Playfair Display',serif;font-size:24px;color:#2E7D32;margin-bottom:10px;">Our Mission</h3>
+        <p style="font-family:'Inter',sans-serif;font-size:18px;line-height:1.7;color:#444;">
+          EarthMag is a youth-driven platform committed to making environmental science accessible, engaging, and actionable. We believe knowledge should not be locked in academic journals, but shared widely to inspire communities, influence policy, and empower the next generation of changemakers.
+        </p>
+      </div>
+    </div>
+
+    <!-- Approach -->
+    <div style="display:flex;align-items:flex-start;gap:20px;margin-bottom:40px;">
+      <div style="font-size:32px;color:#2E7D32;">📖</div>
+      <div>
+        <h3 style="font-family:'Playfair Display',serif;font-size:24px;color:#2E7D32;margin-bottom:10px;">Our Approach</h3>
+        <p style="font-family:'Inter',sans-serif;font-size:18px;line-height:1.7;color:#444;">
+          We combine engaging content, in-depth research, and community-driven storytelling to make environmental issues accessible and actionable. Our goal is to bridge science and society with clarity and impact.
+        </p>
+      </div>
+    </div>
+
+    <!-- Founder -->
+    <div style="display:flex;align-items:center;gap:20px;margin-bottom:40px;flex-wrap:wrap;">
+      <div style="flex:2;">
+        <h3 style="font-family:'Playfair Display',serif;font-size:24px;color:#2E7D32;margin-bottom:10px;">Our Founder</h3>
+        <p style="font-family:'Inter',sans-serif;font-size:18px;line-height:1.7;color:#444;">
+          Advay Nathany is a passionate advocate for environmental justice and sustainability. Through EarthMag, he aims to empower young people to take action for a sustainable future by connecting science with storytelling and real-world change.
+        </p>
+      </div>
+      <div style="flex:1;display:flex;justify-content:center;">
+        <img src="https://media.licdn.com/dms/image/v2/D5603AQEzjWlV9wpYvw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1719595603261?e=1759968000&v=beta&t=jJgoSaLBHjrhugGuN-wfg2ktP-VN06mqrFCmMFEKKHQ" alt="Founder Advay Nathany" style="width:200px;height:200px;object-fit:cover;border-radius:50%;box-shadow:0 6px 16px rgba(0,0,0,0.15);">
+      </div>
+    </div>
+
+    <!-- Quote -->
+    <blockquote style="font-family:'Playfair Display',serif;font-size:22px;font-style:italic;color:#2E7D32;text-align:center;margin-top:60px;">
+      “Change starts with awareness — and awareness starts with us.”
+    </blockquote>
+
+  </div>
 </section>
 
 <!-- Modal for PDF preview -->
